egress-es-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: originate-mtls-for-nginx-user1-es
  namespace: egress-es
spec:
  host: my-nginx-es.user1-mesh-external.svc.cluster.local
  workloadSelector:
    matchLabels:
      app: egress-es
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        credentialName: user1-mesh-external-egress-nginx-client-certs-es
        mode: MUTUAL
        sni: my-nginx-es.user1-mesh-external.svc.cluster.local
